@@ -1,5 +1,5 @@
 .project
 .settings
 .classpath
-*/target/*
+target
 build.xml
