@@ -40,6 +40,13 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.hdiv</groupId>
+			<artifactId>hdiv-thymeleaf</artifactId>
+			<version>${project.version}</version>
+			<scope>compile</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework.version}</version>
