@@ -1,0 +1,81 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<artifactId>hdiv</artifactId>
+		<groupId>org.hdiv</groupId>
+		<version>2.1.7.RC2-SNAPSHOT</version>
+	</parent>
+	<artifactId>hdiv-thymeleaf</artifactId>
+	<name>HDIV Thymeleaf</name>
+	<description>Java Web Application Security Framework</description>
+	<modelVersion>4.0.0</modelVersion>
+	<url>http://www.hdiv.org</url>
+
+	<properties>
+		<org.springframework.version>3.1.0.RELEASE</org.springframework.version>
+		<thymeleaf.version>2.1.3.RELEASE</thymeleaf.version>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.hdiv</groupId>
+			<artifactId>hdiv-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hdiv</groupId>
+			<artifactId>hdiv-spring-mvc</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring3</artifactId>
+			<version>${thymeleaf.version}</version>
+			<optional>true</optional>
+		</dependency>
+		<!-- Testing -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hdiv</groupId>
+			<artifactId>hdiv-core</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.mycila</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<header>${project.parent.basedir}/LICENSE_HEADER</header>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<doctitle>HDIV Thymeleaf API</doctitle>
+					<header>HDIV API ${project.version}</header>
+					<footer>HDIV ${project.version}</footer>
+					<destDir>../docs/api/hdiv-thymeleaf</destDir>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
+</project>
